# win-scan

./: .gitignore  LICENSE  README.md  pyproject.toml  win_diag_usb_portable_windows_diagnostics_python_tkinter_mvp.py
scripts/: build_windows_portable.ps1  launch_app.py
src/win_diag_usb/: __init__.py  __main__.py  cli.py  diagnostics.py  gui.py  reports.py
