[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "win-diag-usb"
version = "1.3.0"
description = "Portable Windows diagnostics app with Tkinter UI + CLI export tools."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Proprietary" }
authors = [
  { name = "Thatkidtk" },
]
dependencies = [
  "psutil>=5.9",
  "wmi>=1.5.1; platform_system == 'Windows'",
]

[project.urls]
Homepage = "https://github.com/Thatkidtk/win-scan"
Issues = "https://github.com/Thatkidtk/win-scan/issues"

[project.scripts]
windiagusb = "win_diag_usb.cli:main"
win-scan = "win_diag_usb.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/win_diag_usb"]

[tool.hatch.build.targets.sdist]
include = [
  "src/win_diag_usb",
  "scripts",
  "README.md",
]
